add my_functions add rds1

--- a/greenplum/ext_ods_table/conf/default.conf
+++ b/greenplum/ext_ods_table/conf/default.conf
@@ -14,7 +14,7 @@ scheduler_log_script="${util_dir}/logging"
 open_log=true
 
 #user
-user="gpadmin"
+user="hdfs"
 
 #kettle 
 data_integration="/data0/dm/data-integration"
@@ -24,6 +24,11 @@ datax_home="/data0/dm/datax_home"
 
 #gpfdist
 gpextdata="/data0/dm/datax_home/myextdata/gpextdata"
+
+#rds1
+rds1_jdbcUrl="jdbc:mysql://192.168.xx.xx:port"
+rds1_username="your_username"
+rds1_password="your_password"
 
 #hive able location path
 ods_hive_dir="/dc_ext/xbd/dm/ods/"
