add a article or modify article

--- a/bigdata-offline-demo/bigdata-offline-demo/conf/default.conf
+++ b/bigdata-offline-demo/bigdata-offline-demo/conf/default.conf
@@ -13,19 +13,15 @@ open_log=true
 
 #
 #运行hadoop任务的用户名
-user="data_mining"
+user="dm"
 
 #hive表路径
-ods_hive_dir="/data_mining/dm/ods/"
-mds_hive_dir="/data_mining/dm/mds/"
-tmp_hive_dir="/data_mining/dm/tmp/"
+ods_hive_dir="/dm/ods/"
+mds_hive_dir="/dm/mds/"
+tmp_hive_dir="/dm/tmp/"
 
 ## jdbc
 OSS_URL="oss://your-key:your-value@x-bigdata.oss-cn-hangzhou-internal.aliyuncs.com"
 
 ## rds1
 jdbc_url_rds1="jdbc:mysql://aliyuncs.com:3306/x_com?autoReconnect=true"
-jdbc_username_rds1="x_stat"
-
-jdbc_passwd_rds1=`echo ss | perl -e 'use MIME::Base64; $_ = decode_base64(your-password); print;'`
-jdbc_passwd_rds2=`echo ss | perl -e 'use MIME::Base64; $_ = decode_base64(your-password); print;'`
